fix(ui5-tab-container): allow selection indicator on text-only tabs to overlap bottom border (#12584)
* fix(ui5-tab-container): fix selection indicator overlap

selection indicator of text only tabs shows above the bottom border

--- a/packages/main/src/themes/TabInStrip.css
+++ b/packages/main/src/themes/TabInStrip.css
@@ -154,7 +154,7 @@
 }
 
 .ui5-tab-strip-item--selected .ui5-tab-strip-item-icon-outer::after {
-	bottom: -0.9375rem;
+	bottom: -1rem;
 }
 
 .ui5-tab-strip-item--disabled {
